--- a/band/kazo/sound_resources.html
+++ b/band/kazo/sound_resources.html
@@ -25,10 +25,57 @@
 2d,0112,001_音出し（PINK PANTHER THEME）
 2d,0113,002_音出し（I'm Not In Love）
 2d,0114,003_音出し（Crude Pop）
-3d,0115,004_007_音出し（ヒバリ）
-3d,0116,xxx_流しっぱなし
+360,0115,004_007_音出し（ヒバリ）
+360,0116,xxx_流しっぱなし
+
+https://diesel141.myqnapcloud.com/site/band/kazo/sound_resources.html
 -->
         // @formatter:on
+        <!-- ■■ 2025年09月14日（日）2d ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tr>
+            <td style="text-align:center" rowspan="8">2025年09月14日（日）</td>
+            <td style="text-align:center" rowspan="8">MUSE-GYM（加須）</td>
+            <td style="text-align:center">0149</td>
+            <td style="text-align:center" rowspan="8">2d</td>
+            <td>001_音出し（PINK PANTHER THEME）</td>
+            <td style="text-align:center"><a href="https://youtu.be/q14Edmn8mP0" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0150</td>
+            <td>002_音出し（I'm Not In Love）</td>
+            <td style="text-align:center"><a href="https://youtu.be/SjBilosoK78" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0151</td>
+            <td>003_音出し（Crude Pop）</td>
+            <td style="text-align:center"><a href="https://youtu.be/_0kPREpFeEQ" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0152</td>
+            <td>004_音出し（DEAR MY FRIEND）</td>
+            <td style="text-align:center"><a href="https://youtu.be/-dJuiXFsGgY" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0153</td>
+            <td>005_音出し（Haushinka）</td>
+            <td style="text-align:center"><a href="https://youtu.be/4O-zn1pvVh8" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0154</td>
+            <td>006_音出し（HAVE YOU EVER SEEN THE RAIN）</td>
+            <td style="text-align:center"><a href="https://youtu.be/odYdkwEfFOs" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0155</td>
+            <td>007_音出し（ヒバリ）</td>
+            <td style="text-align:center"><a href="https://youtu.be/ti5_Fa7b8dc" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0156</td>
+            <td>008_音出し（NOTHING）</td>
+            <td style="text-align:center"><a href="https://youtu.be/yne31YPWtag" target="_blank">動画</a></td>
+        </tr>
+
         <!-- ■■ 2025年08月31日（日）2d ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <tr>
             <td style="text-align:center" rowspan="16">2025年08月31日（日）</td>
@@ -73,10 +120,10 @@
             <td>008_音出し（NOTHING）</td>
             <td style="text-align:center"><a href="https://youtu.be/dX6LaZRo8bA" target="_blank">動画</a></td>
         </tr>
-        <!-- ■■ 2025年08月31日（日）3d ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <!-- ■■ 2025年08月31日（日）360 ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <tr>
             <td style="text-align:center">0141</td>
-            <td style="text-align:center" rowspan="8">3d</td>
+            <td style="text-align:center" rowspan="8">360</td>
             <td>001_音出し（PINK PANTHER THEME）</td>
             <td style="text-align:center"><a href="https://youtu.be/I40Kj1HceEs" target="_blank">動画</a></td>
         </tr>
