--- a/band/untitled/sound_resources.html
+++ b/band/untitled/sound_resources.html
@@ -18,6 +18,62 @@
             <th style="width: 30%;">タイトル</th>
             <th style="width: 10%;">リンク</th>
         </tr>
+        // @formatter:off
+<!--
+読み込みテキストフォーマット
+2025年09月26日（金）
+2d,0015,001_音出し（judith）
+2d,0016,002_音出し（judith）
+2d,0017,003_音出し（judith）
+360,0018,001_音出し（judith）
+360,0019,002_音出し（judith）
+360,0020,003_音出し（judith）
+
+https://diesel141.myqnapcloud.com/site/band/untitled/sound_resources.html
+-->
+// @formatter:on
+        <!-- ■■ 2025年09月26日（金）2d ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tr>
+            <td style="text-align:center" rowspan="6">2025年09月26日（金）</td>
+            <td style="text-align:center" rowspan="6">STUDIO PARK SIDE（戸田）</td>
+            <td style="text-align:center">0015</td>
+            <td style="text-align:center" rowspan="3">2d</td>
+            <td>001_音出し（judith）</td>
+            <td style="text-align:center"><a href="https://youtu.be/gUj4uvFORWw"
+                                             target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0016</td>
+            <td>002_音出し（judith）</td>
+            <td style="text-align:center"><a href="https://youtu.be/NC6zrtTRsnI"
+                                             target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0017</td>
+            <td>003_音出し（judith）</td>
+            <td style="text-align:center"><a href="https://youtu.be/vKwNsza1C88"
+                                             target="_blank">動画</a></td>
+        </tr>
+        <!-- ■■ 2025年09月26日（金）360 ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tr>
+            <td style="text-align:center">0018</td>
+            <td style="text-align:center" rowspan="3">360</td>
+            <td>001_音出し（judith）</td>
+            <td style="text-align:center"><a href="https://youtu.be/_xbezrzN9ds"
+                                             target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0019</td>
+            <td>002_音出し（judith）</td>
+            <td style="text-align:center"><a href="https://youtu.be/LsmnuNbF7Lo"
+                                             target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0020</td>
+            <td>003_音出し（judith）</td>
+            <td style="text-align:center"><a href="https://youtu.be/oDouMT5lUjQ"
+                                             target="_blank">動画</a></td>
+        </tr>
 
         <!-- ■■ 2025年05月10日（土） ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <tr>
@@ -26,7 +82,8 @@
             <td style="text-align:center">0014</td>
             <td style="text-align:center">2D</td>
             <td>音出し（流しっ放し）_001</td>
-            <td style="text-align:center"><a href="https://youtu.be/AMc2ubGhVtU" target="_blank">動画</a></td>
+            <td style="text-align:center"><a href="https://youtu.be/AMc2ubGhVtU"
+                                             target="_blank">動画</a></td>
         </tr>
         <!-- ■■ 2025年03月29日（土） ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <tr>
@@ -35,7 +92,8 @@
             <td style="text-align:center">0013</td>
             <td style="text-align:center">2D</td>
             <td>音出し（流しっ放し）_001</td>
-            <td style="text-align:center"><a href="https://youtu.be/5runh93WqRU" target="_blank">動画</a></td>
+            <td style="text-align:center"><a href="https://youtu.be/5runh93WqRU"
+                                             target="_blank">動画</a></td>
         </tr>
         <!-- ■■ 2024年11月22日（金） ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <tr>
@@ -44,13 +102,15 @@
             <td style="text-align:center">0011</td>
             <td style="text-align:center">2D</td>
             <td>音出し（流しっ放し）_001</td>
-            <td style="text-align:center"><a href="https://youtu.be/L39VT1DqMyE" target="_blank">動画</a></td>
+            <td style="text-align:center"><a href="https://youtu.be/L39VT1DqMyE"
+                                             target="_blank">動画</a></td>
         </tr>
         <tr>
             <td style="text-align:center">0012</td>
             <td style="text-align:center">2D</td>
             <td>音出し（流しっ放し）_002</td>
-            <td style="text-align:center"><a href="https://youtu.be/MSxxd21fN74" target="_blank">動画</a></td>
+            <td style="text-align:center"><a href="https://youtu.be/MSxxd21fN74"
+                                             target="_blank">動画</a></td>
         </tr>
         <!-- ■■ 2024年11月01日（金） ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <tr>
@@ -59,13 +119,15 @@
             <td style="text-align:center">0009</td>
             <td style="text-align:center">2D</td>
             <td>音出し（流しっ放し）_001</td>
-            <td style="text-align:center"><a href="https://youtu.be/B_lbSIj9FAs" target="_blank">動画</a></td>
+            <td style="text-align:center"><a href="https://youtu.be/B_lbSIj9FAs"
+                                             target="_blank">動画</a></td>
         </tr>
         <tr>
             <td style="text-align:center">0010</td>
             <td style="text-align:center">2D</td>
             <td>音出し（流しっ放し）_002</td>
-            <td style="text-align:center"><a href="https://youtu.be/hiiuqqRmieI" target="_blank">動画</a></td>
+            <td style="text-align:center"><a href="https://youtu.be/hiiuqqRmieI"
+                                             target="_blank">動画</a></td>
         </tr>
 
         <!-- ■■ 2024年09月27日（金） ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
@@ -75,7 +137,8 @@
             <td style="text-align:center">0008</td>
             <td style="text-align:center">2D</td>
             <td>音出し（流しっ放し）_001</td>
-            <td style="text-align:center"><a href="https://youtu.be/Ypo9gRwvWtY" target="_blank">動画</a></td>
+            <td style="text-align:center"><a href="https://youtu.be/Ypo9gRwvWtY"
+                                             target="_blank">動画</a></td>
         </tr>
 
         <!-- ■■ 2024年09月06日（金） ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
@@ -85,7 +148,8 @@
             <td style="text-align:center">0007</td>
             <td style="text-align:center">2D</td>
             <td>音出し（流しっ放し）_001</td>
-            <td style="text-align:center"><a href="https://youtu.be/yJNbTUM6oHM" target="_blank">動画</a></td>
+            <td style="text-align:center"><a href="https://youtu.be/yJNbTUM6oHM"
+                                             target="_blank">動画</a></td>
         </tr>
 
         <!-- ■■ 2024年08月24日（金） ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
@@ -95,7 +159,8 @@
             <td style="text-align:center">0006</td>
             <td style="text-align:center">2D</td>
             <td>音出し（流しっ放し）_001</td>
-            <td style="text-align:center"><a href="https://youtu.be/RAmhoovGW-8" target="_blank">動画</a></td>
+            <td style="text-align:center"><a href="https://youtu.be/RAmhoovGW-8"
+                                             target="_blank">動画</a></td>
         </tr>
 
         <!-- ■■ 2024年07月19日（金） ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
@@ -103,9 +168,10 @@
             <td style="text-align:center" rowspan="1">2024年07月19日（金）</td>
             <td style="text-align:center" rowspan="1">STUDIO PARK SIDE（戸田）</td>
             <td style="text-align:center">0005</td>
-            <td style="text-align:center">3D</td>
+            <td style="text-align:center">360</td>
             <td>音出し（流しっ放し）_001</td>
-            <td style="text-align:center"><a href="https://youtu.be/qmALONUnw-U" target="_blank">動画</a></td>
+            <td style="text-align:center"><a href="https://youtu.be/qmALONUnw-U"
+                                             target="_blank">動画</a></td>
         </tr>
 
         <!-- ■■ 2024年07月05日（金） ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
@@ -115,22 +181,26 @@
             <td style="text-align:center">0001</td>
             <td style="text-align:center" rowspan="4">2D</td>
             <td>音出し_001</td>
-            <td style="text-align:center"><a href="https://youtu.be/taX1KTV5FtA" target="_blank">動画</a></td>
+            <td style="text-align:center"><a href="https://youtu.be/taX1KTV5FtA"
+                                             target="_blank">動画</a></td>
         </tr>
         <tr>
             <td style="text-align:center">0002</td>
             <td>音出し_002</td>
-            <td style="text-align:center"><a href="https://youtu.be/Ix5Ysr7FmXc" target="_blank">動画</a></td>
+            <td style="text-align:center"><a href="https://youtu.be/Ix5Ysr7FmXc"
+                                             target="_blank">動画</a></td>
         </tr>
         <tr>
             <td style="text-align:center">0003</td>
             <td>音出し_003</td>
-            <td style="text-align:center"><a href="https://youtu.be/s47uMAjaVkY" target="_blank">動画</a></td>
+            <td style="text-align:center"><a href="https://youtu.be/s47uMAjaVkY"
+                                             target="_blank">動画</a></td>
         </tr>
         <tr>
             <td style="text-align:center">0004</td>
             <td>音出し_004</td>
-            <td style="text-align:center"><a href="https://youtu.be/VA2ATpi5V7Q" target="_blank">動画</a></td>
+            <td style="text-align:center"><a href="https://youtu.be/VA2ATpi5V7Q"
+                                             target="_blank">動画</a></td>
         </tr>
     </table>
 </center>
