--- a/tennis/practice_movies.html
+++ b/tennis/practice_movies.html
@@ -141,6 +141,134 @@
         <!-- ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <tbody name="game" style="font-size: medium;">
         <tr>
+            <th rowspan="4" colspan="1">2025年<br>09月23日(火)<br><font
+                    color="red">秋分の日</font></th>
+            <th class="小川">小川</th>
+            <th class="須藤">須藤</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="内村">内村</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/vfTQH0fUhjs" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="大隅">大隅</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="内村">内村</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/kSV6kio9dhs" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="内村">内村</th>
+            <th class="鵜沢">鵜沢</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="渡辺">渡辺</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/ufVFIZfLiWc" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="桜井">桜井</th>
+            <th colspan="3">【中断】</th>
+            <th class="大隅">大隅</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/emNmEFYhcxE" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="4" colspan="1">2025年<br>09月21日(日)</th>
+            <th class="小川">小川</th>
+            <th class="内村">内村</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="大久保【夫】">大久保【夫】</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/VL22CAJtLcY" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="近藤">近藤</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="桜井">桜井</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/LnWkJdKyMaU" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="伊能">伊能</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="大久保【可】">大久保【可】</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/euppoYBFSGc" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="桜井">桜井</th>
+            <th class="大久保【可】">大久保【可】</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="近藤">近藤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/7LSdwrAjg7k" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="3" colspan="1">2025年<br>09月15日(月)<br><font
+                    color="red">敬老の日</font></th>
+            <th class="小川">小川</th>
+            <th class="内村">内村</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="小林【広】">小林【広】</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/zW7Ow4UgGrM" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="桜井">桜井</th>
+            <th class="大隅">大隅</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="須藤">須藤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/nfQ09oTYThc" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="大隅">大隅</th>
+            <th class="大久保【可】">大久保【可】</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="桜井">桜井</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/5otGeeDd9-0" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
             <th rowspan="2" colspan="1">2025年<br>09月07日(日)</th>
             <th class="柏木">柏木</th>
             <th class="近藤">近藤</th>
