--- a/band/kazo/sound_resources.html
+++ b/band/kazo/sound_resources.html
@@ -21,16 +21,60 @@
         // @formatter:off
 <!--
 読み込みテキストフォーマット
-2025年07月20日（日）
-2d,0112,001_音出し（PINK PANTHER THEME）
-2d,0113,002_音出し（I'm Not In Love）
-2d,0114,003_音出し（Crude Pop）
-360,0115,004_007_音出し（ヒバリ）
+2025年10月05日（日）
+2d,0157,xxx_音出し（通し1発目）
+2d,0158,xxx_音出し（通し2発目）
+360,0159,xxx_音出し（通し1発目）
+360,0160,xxx_音出し（通し2発目）
+
+2d,0157,001_音出し（PINK PANTHER THEME）
+2d,0158,002_音出し（I'm Not In Love）
+2d,0159,003_音出し（Crude Pop）
+2d,0160,004_音出し（DEAR MY FRIEND）
+2d,0161,005_音出し（Haushinka）
+2d,0162,006_音出し（HAVE YOU EVER SEEN THE RAIN）
+2d,0163,007_音出し（ヒバリ）
+2d,0164,008_音出し（NOTHING）
+360,0165,001_音出し（PINK PANTHER THEME）
+360,0166,002_音出し（I'm Not In Love）
+360,0167,003_音出し（Crude Pop）
+360,0168,004_音出し（DEAR MY FRIEND）
+360,0169,005_音出し（Haushinka）
+360,0170,006_音出し（HAVE YOU EVER SEEN THE RAIN）
+360,0171,007_音出し（ヒバリ）
+360,0172,008_音出し（NOTHING）
 360,0116,xxx_流しっぱなし
 
 https://diesel141.myqnapcloud.com/site/band/kazo/sound_resources.html
 -->
         // @formatter:on
+        <!-- ■■ 2025年10月05日（日）2d ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tr>
+            <td style="text-align:center" rowspan="4">2025年10月05日（日）</td>
+            <td style="text-align:center" rowspan="4">MUSE-GYM（加須）</td>
+            <td style="text-align:center">0157</td>
+            <td style="text-align:center" rowspan="2">2d</td>
+            <td>xxx_音出し（通し1発目）</td>
+            <td style="text-align:center"><a href="https://youtu.be/gDjUntEhQr0" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0158</td>
+            <td>xxx_音出し（通し2発目）</td>
+            <td style="text-align:center"><a href="https://youtu.be/IzmXjDMoc9g" target="_blank">動画</a></td>
+        </tr>
+        <!-- ■■ 2025年10月05日（日）360 ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tr>
+            <td style="text-align:center">0159</td>
+            <td style="text-align:center" rowspan="2">360</td>
+            <td>xxx_音出し（通し1発目）</td>
+            <td style="text-align:center"><a href="https://youtu.be/lYXyk3yJjSc" target="_blank">動画</a></td>
+        </tr>
+        <tr>
+            <td style="text-align:center">0160</td>
+            <td>xxx_音出し（通し2発目）</td>
+            <td style="text-align:center"><a href="https://youtu.be/JNctf7zKxcM" target="_blank">動画</a></td>
+        </tr>
+
         <!-- ■■ 2025年09月14日（日）2d ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <tr>
             <td style="text-align:center" rowspan="8">2025年09月14日（日）</td>
