--- a/tennis/practice_movies.html
+++ b/tennis/practice_movies.html
@@ -78,6 +78,7 @@
                     <option>折原</option>
                     <option>柏木</option>
                     <option>勝沼</option>
+                    <option>勝宮</option>
                     <option>鎌田</option>
                     <option>木村【とし】</option>
                     <option>木村【み】</option>
@@ -89,6 +90,8 @@
                     <option>小林【Ｖ】</option>
                     <option>近藤</option>
                     <option>桜井</option>
+                    <option>櫻谷</option>
+                    <option>佐々木</option>
                     <option>清水</option>
                     <option>須藤</option>
                     <option>諏訪</option>
@@ -139,6 +142,115 @@
         <!-- ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <!-- ■■■■■■　ここから試合コンテンツ　■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <!-- ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="4" colspan="1">2025年<br>10月13日(月)<br><font
+                    color="red">スポーツの日</font></th>
+            <th class="和田">和田</th>
+            <th class="内村">内村</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="小林【広】">小林【広】</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/2QlhWq6F_Hw" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="和田">和田</th>
+            <th class="折原">折原</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="小林【広】">小林【広】</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/oC3VbQ945jY" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="和田">和田</th>
+            <th class="折原">折原</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="小林【広】">小林【広】</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/RQImavdbrBE" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="内村">内村</th>
+            <th class="折原">折原</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="小林【広】">小林【広】</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/fb-d5nXwqM0" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="2" colspan="1">2025年<br>10月12日(日)</th>
+            <th class="柏木">柏木</th>
+            <th class="鵜沢">鵜沢</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="小川">小川</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/EgltKf7TiXg" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="柏木">柏木</th>
+            <th class="鵜沢">鵜沢</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="佐々木">佐々木</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/Uv9c2WYN_CE" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="3" colspan="1">2025年<br>09月28日(日)</th>
+            <th class="小川">小川</th>
+            <th class="内村">内村</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="柏木">柏木</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/DKOTpS0zB0k" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="黒澤">黒澤</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="内村">内村</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/KJDionBj_YI" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="内村">内村</th>
+            <th class="大久保【可】">大久保【可】</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="小川">小川</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/iMeDxYqUDyQ" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
         <tbody name="game" style="font-size: medium;">
         <tr>
             <th rowspan="4" colspan="1">2025年<br>09月23日(火)<br><font
@@ -465,7 +577,7 @@
             <th>×</th>
             <th>vs</th>
             <th>●</th>
-            <th class="木村">木村</th>
+            <th class="木村【み】">木村【み】</th>
             <th class="石井【友】">石井【友】</th>
             <th><a href="https://youtu.be/SGBbRbJty5s" target="_blank">動画</a></th>
         </tr>
