--- a/tennis/practice_movies.html
+++ b/tennis/practice_movies.html
@@ -144,6 +144,132 @@
         <!-- ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <tbody name="game" style="font-size: medium;">
         <tr>
+            <th rowspan="4" colspan="1">2026年<br>01月04日(日)</th>
+            <th class="小川">小川</th>
+            <th class="伊能">伊能</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="柏木">柏木</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="柏木">柏木</th>
+            <th class="須藤">須藤</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="小川">小川</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="伊能">伊能</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="柏木">柏木</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="伊能">伊能</th>
+            <th class="海老原">海老原</th>
+            <th colspan="3">【中断】</th>
+            <th class="内村">内村</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="4" colspan="1">2025年<br>10月19日(日)</th>
+            <th class="小川">小川</th>
+            <th class="柏木">柏木</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="伊能">伊能</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/AKrcpvi9NgE" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="伊能">伊能</th>
+            <th class="柏木">柏木</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="小川">小川</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/txlaWqfP4ks" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="鵜沢">鵜沢</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="大隅">大隅</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/uxQcvyC0irU" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="大隅">大隅</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="鵜沢">鵜沢</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/JICpzAi_f0M" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="3" colspan="1">2025年<br>10月18日(土)</th>
+            <th class="小川">小川</th>
+            <th class="柏木">柏木</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="伊能">伊能</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/9SVX_mdBYxI" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="和田">和田</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="柏木">柏木</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/i4EV6pI-Yks" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="井上">井上</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="黒澤">黒澤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/usiMZwCutRY" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
             <th rowspan="4" colspan="1">2025年<br>10月13日(月)<br><font
                     color="red">スポーツの日</font></th>
             <th class="和田">和田</th>
