--- a/tennis/practice_movies.html
+++ b/tennis/practice_movies.html
@@ -142,6 +142,226 @@
         <!-- ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <!-- ■■■■■■　ここから試合コンテンツ　■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
         <!-- ■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■■ -->
+
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="1" colspan="1">2026年<br>02月01日(日)</th>
+            <th class="大隅">大隅</th>
+            <th class="須藤">須藤</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="柏木">柏木</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/MmnE9B5m3zs" target="_blank">動画</a></th>
+        </tr>
+        <!--
+        <tr>
+            <th class="オゼキ">オゼキ</th>
+            <th class="ワタナベ">ワタナベ</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="須藤">須藤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/B9qXbwfZNXs" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="オゼキ">オゼキ</th>
+            <th class="？？？">？？？</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="大隅">大隅</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/agRXflwTS8o" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="？？？">？？？</th>
+            <th class="ワタナベ">ワタナベ</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="柏木">柏木</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/k8-Zshkk-wg" target="_blank">動画</a></th>
+        </tr>
+        -->
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="1" colspan="1">2026年<br>01月25日(日)</th>
+            <th class="小川">小川</th>
+            <th class="須藤">須藤</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="柏木">柏木</th>
+            <th class="石井【友】→内村">石井【友】→内村</th>
+            <th><a href="https://youtu.be/oRKNTEoTHGY" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="4" colspan="1">2026年<br>01月24日(土)</th>
+            <th class="小川">小川</th>
+            <th class="鵜沢">鵜沢</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="柏木">柏木</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/BCoUDqm0efQ" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="柏木">柏木</th>
+            <th class="大隅">大隅</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="近藤">近藤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/oSg23xZ_LbM" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="須藤">須藤</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="内村">内村</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/MYL8nAcnOno" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="黒澤">黒澤</th>
+            <th class="大久保【可】">大久保【可】</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="鵜沢">鵜沢</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/Iytd57Qutvk" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="2" colspan="1">2026年<br>01月18日(日)</th>
+            <th class="柏木">柏木</th>
+            <th class="和田">和田</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="小川">小川</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/u9F00Uc6OXk" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="柏木">柏木</th>
+            <th class="近藤">近藤</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="大隅">大隅</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/ZjTXTqzO7vc" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="3" colspan="1">2026年<br>01月12日(月)<br><font
+                    color="red">成人の日</font></th>
+            <th class="内村">内村</th>
+            <th class="伊能">伊能</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="小川">小川</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/RbieCA7jo3c" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="伊能">伊能</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="内村">内村</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/m_Qd3T3SgGc" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="柏木">柏木</th>
+            <th class="大隅">大隅</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="黒澤">黒澤</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/FNhqz7nYI78" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
+        <tbody name="game" style="font-size: medium;">
+        <tr>
+            <th rowspan="4" colspan="1">2026年<br>01月11日(日)</th>
+            <th class="小川">小川</th>
+            <th class="伊能">伊能</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="柏木">柏木</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/q6D6me5wCZM" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="内村">内村</th>
+            <th class="柏木">柏木</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="大隅">大隅</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/IAvEekg8Hjk" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小林【広】">小林【広】</th>
+            <th class="伊能">伊能</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="小川">小川</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/l54JxZjoq1g" target="_blank">動画</a></th>
+        </tr>
+        <tr>
+            <th class="小川">小川</th>
+            <th class="伊能">伊能</th>
+            <th>●</th>
+            <th>vs</th>
+            <th>×</th>
+            <th class="小林【広】">小林【広】</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/twHMqO04o_U" target="_blank">動画</a></th>
+        </tr>
+        <tr style="border: none;">
+            <td colspan="9" bgcolor="black"></td>
+        </tr>
+        </tbody>
         <tbody name="game" style="font-size: medium;">
         <tr>
             <th rowspan="4" colspan="1">2026年<br>01月04日(日)</th>
@@ -152,7 +372,7 @@
             <th>●</th>
             <th class="柏木">柏木</th>
             <th class="石井【友】">石井【友】</th>
-            <th><a href="" target="_blank">動画</a></th>
+            <th><a href="https://youtu.be/auwaw22uFic" target="_blank">動画</a></th>
         </tr>
         <tr>
             <th class="柏木">柏木</th>
@@ -162,7 +382,7 @@
             <th>●</th>
             <th class="小川">小川</th>
             <th class="石井【友】">石井【友】</th>
-            <th><a href="" target="_blank">動画</a></th>
+            <th><a href="https://youtu.be/DJwWxNqhSas" target="_blank">動画</a></th>
         </tr>
         <tr>
             <th class="小川">小川</th>
@@ -172,7 +392,7 @@
             <th>×</th>
             <th class="柏木">柏木</th>
             <th class="石井【友】">石井【友】</th>
-            <th><a href="" target="_blank">動画</a></th>
+            <th><a href="https://youtu.be/-EVuwa6-gIc" target="_blank">動画</a></th>
         </tr>
         <tr>
             <th class="伊能">伊能</th>
@@ -180,7 +400,7 @@
             <th colspan="3">【中断】</th>
             <th class="内村">内村</th>
             <th class="石井【友】">石井【友】</th>
-            <th><a href="" target="_blank">動画</a></th>
+            <th><a href="https://youtu.be/hC2q6VPHVAQ" target="_blank">動画</a></th>
         </tr>
         <tr style="border: none;">
             <td colspan="9" bgcolor="black"></td>
@@ -5345,18 +5565,18 @@
         </tbody>
         <tbody name="game" style="font-size: medium;">
         <!--
-                <tr>
-                    <th rowspan="6" colspan="1">2024年<br>01月14日(日)</th>
-                    <th class="マルヤマ">マルヤマ</th>
-                    <th class="オゼキ">オゼキ</th>
-                    <th>×</th>
-                    <th>vs</th>
-                    <th>●</th>
-                    <th class="青木">青木</th>
-                    <th class="石井【友】">石井【友】</th>
-                    <th><a href="https://youtu.be/7Pgk8tS4SHE" target="_blank">動画</a></th>
-                </tr>
-                -->
+        <tr>
+            <th rowspan="6" colspan="1">2024年<br>01月14日(日)</th>
+            <th class="マルヤマ">マルヤマ</th>
+            <th class="オゼキ">オゼキ</th>
+            <th>×</th>
+            <th>vs</th>
+            <th>●</th>
+            <th class="青木">青木</th>
+            <th class="石井【友】">石井【友】</th>
+            <th><a href="https://youtu.be/7Pgk8tS4SHE" target="_blank">動画</a></th>
+        </tr>
+        -->
         <tr>
             <th rowspan="1" colspan="1">2024年<br>01月14日(日)</th>
             <th class="黒澤">黒澤</th>
